# coolstore-microservices

./: .dockerignore  .editorconfig  .env  .gitignore  .gitmodules  .travis.yml  404.html  CODE_OF_CONDUCT.md  DevLocal.md  LICENSE  LocalDev.md  NET6.md  NuGet.config  README.md  app-451915cb778228d20172.js  app-451915cb778228d20172.js.map  app-a26c806b151046cce283.js  app-a26c806b151046cce283.js.map  azure-pipelines.yml  build-js-styles.css  chunk-manifest.json  codecov.yml  commons-98b0a0ce2e8878e93b7b.js  commons-98b0a0ce2e8878e93b7b.js.map  commons-d09c2f037b1576dbfbb7.js  commons-d09c2f037b1576dbfbb7.js.map  component---site-pages-landing-js-7a04f3721ec3f8b3df00.js  component---site-pages-landing-js-7a04f3721ec3f8b3df00.js.map  component---site-pages-landing-js-9e786a01b532a773058a.js  component---site-pages-landing-js-9e786a01b532a773058a.js.map  component---src-layouts-index-js-73bc5c648da2476bec74.js  component---src-layouts-index-js-73bc5c648da2476bec74.js.map  component---src-layouts-index-js-8a6925ac9226d562372b.js  component---src-layouts-index-js-8a6925ac9226d562372b.js.map  component---src-pages-404-js-dafbfbd345a265f9fe6e.js  component---src-pages-404-js-dafbfbd345a265f9fe6e.js.map  component---src-templates-docs-page-js-8e21cb098d5f49b9ad94.js  component---src-templates-docs-page-js-8e21cb098d5f49b9ad94.js.map  coolstore-on-dapr.sln  coolstore-on-dapr.sln.DotSettings  (+101 more)
.azure/: backoffice-azure-pipelines.yml  cart-azure-pipelines.yml  inventory-azure-pipelines.yml  openapi-azure-pipelines.yml
.github/: FUNDING.yml  lock.yml
404/: index.html
assets/: Diagram.pptx  demo-cloud-native.xml  state-of-the-art.pptx
assets/css/: 0.styles.0ea6d4b6.css
assets/js/: 2.12832711.js  2.65f30fee.js  2.aa9c82e9.js  3.68244df8.js  3.fcc90de9.js  4.7d932259.js  4.89509bda.js  4.acbad4b1.js  5.25de7a53.js  5.aa4869c4.js  5.b46ab106.js  5.e618186f.js  6.393ab61d.js  6.ad8626dc.js  6.cfea8461.js  7.22d18b56.js  7.3271025c.js  7.bad19c3b.js  7.c99a5e2d.js  8.0a2c7dc2.js  8.5b7f8591.js  8.9b4eb9e6.js  8.caadc504.js  8.eff3d4d2.js  8.ffc77e2c.js  9.3e0f3d63.js  9.e4b84b16.js  app.359ee694.js  app.69f4f147.js  app.ab062447.js  app.cd673f29.js  app.e44efd6e.js  app.e9fe9b31.js  app.f4beff19.js
components/: appconfig.yaml  binding-cron-1m.yaml  binding-cron-30s.yaml  binding-cron-complete-order.yaml  binding-cron-process-order.yaml  pubsub.yaml  statestore.yaml  zipkin.yaml
components/local/: appconfig.yaml  binding-cron-complete-order.yaml  statestore.yaml  zipkin.yaml
deployment/: node-vnd.Dockerfile
deployment/helm/: cluster-role-binding.yaml
deployment/istio/: dev-all-in-one.yaml
deployment/k8s/: gateway-service.yaml  idp-service.yaml  inventory-service.yaml  nginx-ingress.yaml  web.yaml
deployment/manifests/: gateway-dep.yaml  gateway-svc.yaml  idp-svc.yaml  nginx-ingress.yaml  spa-dep.yaml
deploys/CICD-azure/: cart-azure-pipelines.yml  catalog-azure-pipelines.yml  idp-azure-pipelines.yml  inventory-azure-pipelines.yml  rating-azure-pipelines.yml  web-azure-pipelines.yml
deploys/azure-pipelines/: backoffice-azure-pipelines.yml  cart-azure-pipelines.yml  catalog-azure-pipelines.yml  catalog-v1-azure-pipelines.yml  docs-azure-pipelines.yml  graphql-azure-pipelines.yml  idp-azure-pipelines.yml  inventory-azure-pipelines.yml  openapi-azure-pipelines.yml  openapiv1-azure-pipelines.yml  rating-azure-pipelines.yml  review-azure-pipelines.yml  web-azure-pipelines.yml  webui-azure-pipelines.yml
deploys/bicep/: core.bicep  dapr.bicep  idp_web.bicep  main.bicep
deploys/helm/: cluster-role.yaml  service-account.yaml
deploys/iac/: Vagrantfile  readme.md
deploys/istio/: dev-all-in-one.yaml  istio-sidecar-injector.yaml
deploys/k8s/: aks-all-in-one.yaml  auth-policy.yaml  coolstore-migration.yaml  coolstore.yaml  dev-all-in-one.yaml  envoy-filter.yaml  istio-sidecar-injector.yaml  kiali-config.yaml  readme.md
deploys/linkerd/: coolstore-infrastructure.yaml  coolstore-migration.yaml  coolstore.yaml  gateway.yaml  readme.md
deploys/scripts/: build-all-images.sh  build-dotnet-images.sh  build-images.sh  clean-all-images.sh  deploy-aks.ps1  gen-protos.sh  helm-template.sh  init-helm.sh  inject-istio.sh  start.sh
deploys/setup-infra/: create_aks.py  get_aks_config.py  install_all.py  install_dashboard.py  install_helm.py  install_istio.py
deploys/skaffold/: cart.yaml
design-microservices/: index.html
development/: index.html
docs/: README.md  gatsby-config.js  package.json  publish_docs.sh  readme.txt
docs/.vuepress/: config.js
docs/design-microservices/: README.md
docs/development/: README.md
docs/model-microservices/: README.md
docs/site/: sitemap.yml
model-microservices/: index.html
src/rust/: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  client.http  sqlx-data.json  sqlx.sh  sqlx_migrate.sh
src/rust/.cargo/: config.toml
src/rust/.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml  postgres-init.sql
src/rust/apis/: Cargo.toml
src/rust/crates/common/: Cargo.toml
src/rust/crates/common/src/: error.rs  lib.rs
src/rust/crates/common/src/config/: env.rs  mod.rs
src/rust/crates/common/src/config/db/: mod.rs  postgres.rs
src/rust/crates/inventory/: Cargo.toml
src/rust/crates/inventory/migrations/: 20220404134042_init_db.sql
src/rust/crates/inventory/src/: handlers.rs  lib.rs
src/rust/crates/product_catalog/: Cargo.toml
src/rust/crates/product_catalog/migrations/: 20220403135817_init_db.up.sql  20220404134115_init_db.sql
src/rust/crates/product_catalog/src/: handlers.rs  lib.rs
src/rust/docker/: Dockerfile-inventory  Dockerfile-product-catalog
src/rust/inventory/: Cargo.toml  Dockerfile
src/rust/inventory/src/: error.rs  handlers.rs  lib.rs  logs.rs
src/rust/inventory/src/config/: env.rs
src/rust/inventory/src/config/db/: mod.rs  postgres.rs
src/rust/inventory/src/migrations/: 20220226113151_init_data.up.sql  20220226113554_seed_data.up.sql
src/rust/product_catalog/: Cargo.toml
src/rust/src/cmd/inventory/: server.rs
src/rust/src/cmd/product_catalog/: server.rs
(+2292 files in other folders)
