[package]
name = "apis"
version = "0.1.0"
authors = ["Thang Chung"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "inventory_api"
path = "src/bin/inventory/server.rs"

[dependencies]
axum = { version = "0.4", features = ["headers"] }
clap = { version = "3.0.0-rc.4", features = ["derive", "env"] }
dotenv = "0.15"
headers = "0.3"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
validator = { version = "0.14", features = ["derive"] }
slog = "2.7"
hyper = { version = "0.14", features = ["full"] }
futures = "0.3.19"
openssl-probe = "0.1.5"
sqlx = { version = "0.5.10", default-features = false, features = [
  "runtime-tokio-rustls",
  "any",
  "postgres",
  "macros",
  "chrono",
  "uuid",
  "migrate",
  "offline",
] }
common = { path = "../crates/common", version = "0.1.0" }
inventory = { path = "../crates/inventory", version = "0.1.0" }

[profile.release]
opt-level = 2
debug = true
