[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4" }
clap = { version = "3.0.0-rc.4", features = ["derive", "env"] }
slog = "2.7"
futures = "0.3.19"
sqlx = { version = "0.5.10", features = [
  "runtime-tokio-rustls",
  "any",
  "postgres",
  "macros",
  "chrono",
  "uuid",
  "migrate",
  "offline",
] }
