[package]
name = "product_catalog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5", features = ["headers"] }
lazy_static = "1.4"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.2", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
validator = { version = "0.14", features = ["derive"] }
slog = "2.7"
anyhow = "1.0"
hyper = { version = "0.14", features = ["full"] }
futures = "0.3.19"
sqlx = { version = "0.5.10", default-features = false, features = [
  "runtime-tokio-rustls",
  "any",
  "postgres",
  "macros",
  "chrono",
  "uuid",
  "migrate",
  "offline",
  "any"
] }
common = { path = "../common", version = "0.1.0" }

[profile.release]
opt-level = 2
debug = true